Replace ArrayList with LinkedHashSet to improve (incremental) compilation performance